# Rf-Test-BJH

./: .gitignore  CMakeLists.txt  Makefile  README.md  archi-sw.drawio  hw-synoptique.drawio  partitions.csv  q  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.factory  sdkconfig.defaults.ota  sdkconfig.factory  vivado.jou  vivado_pid10378.debug  vivado_pid232489.debug  vivado_pid232489.str
.github/workflows/: .github-ci.yml  build.yml  main.yml
chip_info/: chip_info.c
counter/: counter.c
data/: chip_info.c  data.c  data.c.EXAMPLE  data.c.ORIGIN  meas_mgt.c
doc/: hw-synoptique-2.drawio  rf-freq-archi.drawio
doc/Rf-Test-BJH/: archi-sw.drawio  for_developpers.md  hw-synoptique.drawio  hw_sw_documentation.md  meca_struct.drawio  partition-table.drawio
doc/Rf-Test-BJH/archi/: archi-sw.drawio  hw-synoptique-3.drawio  partition-table.drawio  rf-freq-archi.drawio
doc/Rf-Test-BJH/how-to/: for_developpers.md  open_wifi_menu.webm  setup-wifi.md  update-fw.md
doc/frequencymeter/: ERA-2+.dcm  ERA-2+.kicad_sym  ERA-2+.lib  ERA-2+.mod  ERA2.kicad_mod  conversation_frequencemetre_complet.md  conversation_frequencemetre_complet2.md  measure_1000kHz_1000ms  measure_1000kHz_100ms  measure_1000kHz_10ms  measure_1000kHz_1ms  measure_100kHz_1000ms  measure_100kHz_100ms  measure_100kHz_10ms  measure_10MHz_100ms  measure_10MHz_100us  measure_10MHz_10ms  measure_10MHz_1ms  measure_16MHz  xc7a35tcpg236pkg.txt
doc/old/: hw-synoptique-2.drawio
http_server/: keep_alive.c  server.c  ws.c
http_server/pages/: about.c  about.html  factory.html  frequencymeter.c  frequencymeter.html  frequencymeter.js  generator.c  generator.html  generator.js  index.c  index.html  index.js  powermeter.c  powermeter.html  script.js  script_stub.js  style.css  upload.c  upload.html  upload.js  wifi.c  wifi.html
hw/boards/backplane_board/: backplane_board.kicad_pcb  backplane_board.kicad_prl  backplane_board.kicad_pro  backplane_board.kicad_sch
hw/boards/frequencymeter/counter_front_end/counter_front_end/: counter_front_end.kicad_prl  counter_front_end.kicad_pro  counter_front_end.kicad_sch
hw/boards/io_wrapper_board/: fp-info-cache  io_wrapper_board.kicad_pcb  io_wrapper_board.kicad_prl  io_wrapper_board.kicad_pro  io_wrapper_board.kicad_sch
hw/fpga/reciproq_freq_meas/: reciproq_freq_meas.xpr  tb_top_reciproc_freq_meas_behav.wcfg
hw/fpga/reciproq_freq_meas/reciproq_freq_meas.cache/sim/: ssm.db
hw/fpga/reciproq_freq_meas/reciproq_freq_meas.cache/wt/: synthesis.wdf  webtalk_pa.xml
hw/fpga/reciproq_freq_meas/reciproq_freq_meas.runs/clk_wiz_0_synth_1/: clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
hw/fpga/reciproq_freq_meas/reciproq_freq_meas.runs/impl_1/: clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  rundef.js  (+35 more)
hw/freq_front_end/: #auto_saved_files#  f4bjh_library.bak  f4bjh_library.kicad_sym  fp-info-cache  freq_front_end.kicad_prl  freq_front_end.kicad_pro  freq_front_end.kicad_sch  sym-lib-table  ~freq_front_end.kicad_sch.lck
hw/freq_front_end/reciproq_freq_meas/: reciproq_freq_meas.xpr  tb_top_reciproc_freq_meas_behav.wcfg
include/: adf4351.h  adf4351_v2.h  chip_info.h  counter.h  data.h  freq.h  gpio.h  http_server.h  keep_alive.h  lcd.h  main.h  meas.h  meas_mgt.h  reciproc_freq_meas.h  rf_gen.h  softap.h  spi.h  wifi.h
lcd/: lcd.c  lvgl.c  lvgl.c.OLD
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.c.EXAMPLE
main/web/: about.html  frequencymeter.html  generator.html  index.html  powermeter.html  script.js  style.css  upload.html  wifi.html
meas/chip_info/: chip_info.c
meas/counter/: counter.c
meas/freq/: freq.c  freq_v2.c  reciproc_freq_meas.c
meas/part_info/: part_info.c
meas/rf_gen/: adf4351.c  adf4351_v2.c  rf_gen.c  rf_gen_v2.c
meas_mgt/: fsm.c  meas_mgt.c
spi/: spi.c
tests/hf_gen_fpga/Cmod-A7-35T-GPIO-hw.xpr/: README.md
tests/hf_gen_fpga/Cmod-A7-35T-GPIO-hw.xpr/hw/: hw.xpr
tests/hf_gen_fpga/Cmod_A7-hf_gen_fpga/: Cmod_A7-hf_gen_fpga.xpr  design_1_wrapper_behav.wcfg
tests/hf_gen_fpga/CmodaA7_led-blink-1stprj/: CmodaA7_led-blink-1stprj.xpr  README.md
tests/hf_gen_fpga/hf_gen_fpga_v2/: design_1_wrapper_behav.wcfg  hf_gen_fpga_v2.xpr
wifi/: softap.c  softap_sta.c
(+596 files in other folders)
